dnl @configure_input@
dnl

AC_PREREQ([2.69])
AC_INIT([CCSys],[0.1.0-devel.0],
  [marco.maggi-ipsu@poste.it],
  [ccsys],[http://github.com/marcomaggi/ccsys/])
dnl This is the revision number of this configure.ac
AC_REVISION([0.1])
AC_COPYRIGHT([Copyright (c) 2017, 2018 Marco Maggi <marco.maggi-ipsu@poste.it>

This program is free software: you  can redistribute it and/or modify it
under the terms of the GNU Lesser General Public License as published by
the Free  Software Foundation, either version  3 of the License,  or (at
your option) any later version.

This program  is distributed  in the  hope that it  will be  useful, but
WITHOUT   ANY   WARRANTY;  without   even   the   implied  warranty   of
MERCHANTABILITY  or  FITNESS FOR  A  PARTICULAR  PURPOSE.  See  the  GNU
General Public License for more details.

You should have received a copy of the GNU Lesser General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
])
AC_CONFIG_SRCDIR([src/])
AC_CONFIG_MACRO_DIR([meta/autotools])
AC_CONFIG_AUX_DIR([meta/autotools])
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([foreign dist-xz no-dist-gzip subdir-objects])
AM_MAINTAINER_MODE

AM_PROG_AR
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_MKDIR_P

LT_PREREQ([2.4])
LT_INIT

dnl page
#### configuration

AS_CASE("$target_os",
  [*linux*],
  [ccsys_OS_LINUX=yes
   AC_MSG_NOTICE([detected OS: linux])],
  [*bsd*],
  [ccsys_OS_BSD=yes
   AC_MSG_NOTICE([detected OS: BSD])],
  [*cygwin*],
  [ccsys_OS_CYGWIN=yes
   AC_MSG_NOTICE([detected OS: CYGWIN])],
  [*darwin*],
  [ccsys_OS_DARWIN=yes
   AC_MSG_NOTICE([detected OS: DARWIN])])
AM_CONDITIONAL([ON_LINUX], [test "x$ccsys_OS_LINUX"  = xyes])
AM_CONDITIONAL([ON_BSD],   [test "x$ccsys_OS_BSD"    = xyes])
AM_CONDITIONAL([ON_CYGWIN],[test "x$ccsys_OS_CYGWIN" = xyes])
AM_CONDITIONAL([ON_DARWIN],[test "x$ccsys_OS_DARWIN" = xyes])

AM_COND_IF([ON_DARWIN],[AC_DEFINE([CCSYS_ON_DARWIN],[1],[defined to 1 when compiling on Darwin])])

dnl page
#### libraries interface version

AS_VAR_SET([SLACKSTUFF_PACKAGE_VERSION],[0.1d0.0])
AC_SUBST([SLACKSTUFF_PACKAGE_VERSION])

dnl This is the version stored in the pkg-config data file.
AC_SUBST([CCSYS_PKG_CONFIG_VERSION],[0.1.0])

MM_LIBTOOL_LIBRARY_VERSIONS([ccsys],1,0,0)

dnl page
#### external libraries

PKG_CHECK_MODULES([CCEXCEPTIONS],[ccexceptions >= 0.6])

AC_CACHE_SAVE

dnl page
#### basic system inspection

AC_LANG([C])
AC_PROG_CC_C99
AX_CHECK_COMPILE_FLAG([-std=c11],[],[AC_MSG_ERROR([*** Compiler does not support -std=c11])],[-pedantic])

AS_VAR_SET(AX_CFLAGS,[-std=c11])
AS_VAR_APPEND(AX_CFLAGS,[" -Wall -Wextra"])
AX_GCC_VERSION
AS_IF([test "x$GCC" = "xyes"],
  [AS_CASE("$GCC_VERSION",
     [7.*],[AS_VAR_APPEND(AX_CFLAGS,[" -pedantic -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wrestrict -Wnull-dereference -Wjump-misses-init -Wdouble-promotion -Wshadow -Wformat=2 -Wmisleading-indentation"])])])
AC_SUBST(AX_CFLAGS)

AM_PROG_AS
AC_PROG_CC
AM_PROG_CC_C_O
AC_HEADER_STDC
AC_CHECK_HEADERS([assert.h errno.h stdint.h stddef.h setjmp.h memory.h limits.h utime.h fcntl.h dirent.h time.h])
AC_CHECK_HEADERS([sys/select.h sys/stat.h sys/time.h sys/types.h sys/uio.h sys/mman.h sys/wait.h])
AC_CHECK_HEADERS([netdb.h netinet/in.h arpa/inet.h sys/socket.h sys/un.h])
AC_CHECK_HEADERS([signal.h])
AC_HEADER_STDBOOL

dnl The  documentation of GNU  Autoconf states that AC_PROG_CC  sets the
dnl variable "GCC" to "yes" if the selected compiler is GCC.
AM_CONDITIONAL([WANT_GCC],[test "x$GCC" = xyes])

AC_CACHE_SAVE

dnl page
#### checks for library functions

AC_DEFINE([_POSIX_C_SOURCE],[200809L],[Request enabling latest POSIX features.])
AC_DEFINE([_GNU_SOURCE],[1],[enable everything GNU])

AC_FUNC_MALLOC

AC_CHECK_FUNCS([mlock munlock mlockall munlockall])
AC_CHECK_FUNCS([mmap munmap msync mprotect])
AC_CHECK_FUNCS([open openat close read pread write pwrite lseek])
AC_CHECK_FUNCS([readv writev preadv pwritev preadv2 pwritev2])
AC_CHECK_FUNCS([pipe pipe2 mkfifo mkfifoat])
AC_CHECK_FUNCS([dup dup2 dup3])
AC_CHECK_FUNCS([select pselect])
AC_CHECK_FUNCS([sync syncfs fsync fdatasync])
AC_CHECK_FUNCS([getcwd chdir fchdir get_current_dir_name])
AC_CHECK_FUNCS([opendir fdopendir readdir closedir dirfd])
AC_CHECK_FUNCS([stat fstat lstat])
AC_CHECK_FUNCS([mkdir mkdirat rmdir])
AC_CHECK_FUNCS([link linkat symlink symlinkat readlink readlinkat realpath unlink unlinkat remove rename])
AC_CHECK_FUNCS([chown fchown lchown fchownat])
AC_CHECK_FUNCS([chmod fchmod fchmodat access faccessat])
AC_CHECK_FUNCS([utime utimes])
AC_CHECK_FUNCS([truncate ftruncate])
AC_CHECK_FUNCS([mkstemp])
AC_CHECK_FUNCS([bind getsockname inet_network socket shutdown socketpair connect listen accept getpeername])
AC_CHECK_FUNCS([send recv sendto recvfrom getsockopt setsockopt])
AC_CHECK_FUNCS([system exit _exit fork execv execve execvp waitpid])

dnl GNU C library stuff

dnl AC_CHECK_HEADERS([search.h])
AC_CHECK_FUNCS([mkdtemp mremap madvise inet_aton])
dnl AC_CHECK_FUNCS([gethostbyname_r gethostbyname2_r gethostbyaddr_r])

dnl Linux stuff
AC_CHECK_FUNCS([lutimes futimes])

AC_CACHE_SAVE

dnl page
#### inspection of data types_t

CCSYS_UINT_TYPE_ALIAS([SIZE_T],[size_t],[CCSYS_STDDEF_HEADER])
CCSYS_INT_TYPE_ALIAS([SSIZE_T],[ssize_t],[CCSYS_UNISTD_HEADER])
CCSYS_INT_TYPE_ALIAS([PTRDIFF_T],[ptrdiff_t],[CCSYS_STDDEF_HEADER])

CCSYS_INT_TYPE_ALIAS([MODE_T],[mode_t],[CCSYS_SYS_TYPES_HEADER])
CCSYS_INT_TYPE_ALIAS([OFF_T],[off_t],[CCSYS_SYS_TYPES_HEADER])
CCSYS_INT_TYPE_ALIAS([INO_T],[ino_t],[CCSYS_SYS_TYPES_HEADER])
CCSYS_INT_TYPE_ALIAS([DEV_T],[dev_t],[CCSYS_SYS_TYPES_HEADER])
CCSYS_INT_TYPE_ALIAS([NLINK_T],[nlink_t],[CCSYS_SYS_TYPES_HEADER])
CCSYS_INT_TYPE_ALIAS([BLKSIZE_T],[blksize_t],[CCSYS_SYS_TYPES_HEADER])
CCSYS_INT_TYPE_ALIAS([BLKCNT_T],[blkcnt_t],[CCSYS_SYS_TYPES_HEADER])

CCSYS_INT_TYPE_ALIAS([PID_T],[pid_t],[CCSYS_SYS_TYPES_HEADER])
CCSYS_INT_TYPE_ALIAS([UID_T],[uid_t],[CCSYS_SYS_TYPES_HEADER])
CCSYS_INT_TYPE_ALIAS([GID_T],[gid_t],[CCSYS_SYS_TYPES_HEADER])

CCSYS_INT_TYPE_ALIAS([SOCKLEN_T],[socklen_t],[CCSYS_UNISTD_HEADER])

AC_CACHE_SAVE

dnl page
#### inspection of data structures

CCSYS_SIZEOF([STRUCT_DIRENT],[struct dirent],[CCSYS_DIRENT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_DIRENT_D_NAME],[struct dirent],[d_name],[CCSYS_DIRENT_HEADER])

CCSYS_SIZEOF([STRUCT_IOVEC],[struct iovec],[CCSYS_SYS_UIO_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_IOVEC_IOV_BASE],[struct iovec],[iov_base],[CCSYS_SYS_UIO_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_IOVEC_IOV_LEN], [struct iovec],[iov_len], [CCSYS_SYS_UIO_HEADER])

# Inspection of: "struct stat".
#
CCSYS_SIZEOF([STRUCT_STAT],[struct stat],[CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_DEV],    [struct stat],[st_dev],     [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_INO],    [struct stat],[st_ino],     [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_MODE],   [struct stat],[st_mode],    [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_NLINK],  [struct stat],[st_nlink],   [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_UID],    [struct stat],[st_uid],     [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_GID],    [struct stat],[st_gid],     [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_RDEV],   [struct stat],[st_rdev],    [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_SIZE],   [struct stat],[st_size],    [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_BLKSIZE],[struct stat],[st_blksize], [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_BLOCKS], [struct stat],[st_blocks],  [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_ATIME],  [struct stat],[st_atime],   [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_MTIME],  [struct stat],[st_mtime],   [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_CTIME],  [struct stat],[st_ctime],   [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_ATIME_USEC],  [struct stat],[st_atime_usec],   [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_MTIME_USEC],  [struct stat],[st_mtime_usec],   [CCSYS_SYS_STAT_HEADER])
CCSYS_STRUCT_FIELD([STRUCT_STAT_ST_CTIME_USEC],  [struct stat],[st_ctime_usec],   [CCSYS_SYS_STAT_HEADER])

CCSYS_SIZEOF([STRUCT_UTIMBUF],[struct utimbuf],[CCSYS_UTIME_HEADER])

CCSYS_SIZEOF([SIGSET_T],[sigset_t],[CCSYS_SYS_SELECT_HEADER])

CCSYS_SIZEOF([STRUCT_HOSTENT],[struct hostent],[CCSYS_NETDB_HEADER])

CCSYS_SIZEOF([STRUCT_IN_ADDR],[struct in_addr],[CCSYS_NETINET_IN_HEADER])
CCSYS_SIZEOF([STRUCT_SOCKADDR],[struct sockaddr],[CCSYS_NETINET_IN_HEADER])
CCSYS_SIZEOF([STRUCT_SOCKADDR_IN],[struct sockaddr_in],[CCSYS_NETINET_IN_HEADER])
CCSYS_SIZEOF([STRUCT_SOCKADDR_IN6],[struct sockaddr_in6],[CCSYS_NETINET_IN_HEADER])
CCSYS_SIZEOF([STRUCT_SOCKADDR_UN],[struct sockaddr_un],[CCSYS_SYS_UN_HEADER])

CCSYS_SIZEOF([STRUCT_TIMEVAL],[struct timeval],[CCSYS_TIME_HEADER])
CCSYS_SIZEOF([STRUCT_TIMESPEC],[struct timespec],[CCSYS_TIME_HEADER])

CCSYS_SIZEOF([STRUCT_FD_SET],[fd_set],[CCSYS_SYS_TYPES_HEADER])

AC_CACHE_SAVE

dnl page
#### system constants: errno values

# Errno values.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_E2BIG],[E2BIG],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EACCES],[EACCES],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EADDRINUSE],[EADDRINUSE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EADDRNOTAVAIL],[EADDRNOTAVAIL],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EADV],[EADV],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EAFNOSUPPORT],[EAFNOSUPPORT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EAGAIN],[EAGAIN],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EALREADY],[EALREADY],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EAUTH],[EAUTH],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EBACKGROUND],[EBACKGROUND],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EBADE],[EBADE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EBADFD],[EBADFD],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EBADF],[EBADF],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EBADMSG],[EBADMSG],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EBADRPC],[EBADRPC],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EBADRQC],[EBADRQC],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EBADR],[EBADR],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EBADSLT],[EBADSLT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EBFONT],[EBFONT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EBUSY],[EBUSY],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ECANCELED],[ECANCELED],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ECHILD],[ECHILD],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ECHRNG],[ECHRNG],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ECOMM],[ECOMM],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ECONNABORTED],[ECONNABORTED],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ECONNREFUSED],[ECONNREFUSED],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ECONNRESET],[ECONNRESET],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EDEADLK],[EDEADLK],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EDEADLOCK],[EDEADLOCK],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EDESTADDRREQ],[EDESTADDRREQ],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EDIED],[EDIED],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EDOM],[EDOM],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EDOTDOT],[EDOTDOT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EDQUOT],[EDQUOT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EEXIST],[EEXIST],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EFAULT],[EFAULT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EFBIG],[EFBIG],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EFTYPE],[EFTYPE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EHOSTDOWN],[EHOSTDOWN],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EHOSTUNREACH],[EHOSTUNREACH],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EHWPOISON],[EHWPOISON],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EIDRM],[EIDRM],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EILSEQ],[EILSEQ],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EINPROGRESS],[EINPROGRESS],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EINTR],[EINTR],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EINVAL],[EINVAL],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EIO],[EIO],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EISCONN],[EISCONN],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EISDIR],[EISDIR],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EISNAM],[EISNAM],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EKEYEXPIRED],[EKEYEXPIRED],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EKEYREJECTED],[EKEYREJECTED],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EKEYREVOKED],[EKEYREVOKED],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EL2HLT],[EL2HLT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EL2NSYNC],[EL2NSYNC],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EL3HLT],[EL3HLT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EL3RST],[EL3RST],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ELIBACC],[ELIBACC],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ELIBBAD],[ELIBBAD],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ELIBEXEC],[ELIBEXEC],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ELIBMAX],[ELIBMAX],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ELIBSCN],[ELIBSCN],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ELNRNG],[ELNRNG],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ELOOP],[ELOOP],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EMEDIUMTYPE],[EMEDIUMTYPE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EMFILE],[EMFILE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EMLINK],[EMLINK],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EMSGSIZE],[EMSGSIZE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EMULTIHOP],[EMULTIHOP],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENAMETOOLONG],[ENAMETOOLONG],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENAVAIL],[ENAVAIL],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENEEDAUTH],[ENEEDAUTH],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENETDOWN],[ENETDOWN],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENETRESET],[ENETRESET],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENETUNREACH],[ENETUNREACH],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENFILE],[ENFILE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOANO],[ENOANO],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOBUFS],[ENOBUFS],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOCSI],[ENOCSI],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENODATA],[ENODATA],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENODEV],[ENODEV],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOENT],[ENOENT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOEXEC],[ENOEXEC],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOKEY],[ENOKEY],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOLCK],[ENOLCK],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOLINK],[ENOLINK],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOMEDIUM],[ENOMEDIUM],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOMEM],[ENOMEM],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOMSG],[ENOMSG],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENONET],[ENONET],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOPKG],[ENOPKG],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOPROTOOPT],[ENOPROTOOPT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOSPC],[ENOSPC],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOSR],[ENOSR],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOSTR],[ENOSTR],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOSYS],[ENOSYS],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOTBLK],[ENOTBLK],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOTCONN],[ENOTCONN],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOTDIR],[ENOTDIR],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOTEMPTY],[ENOTEMPTY],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOTNAM],[ENOTNAM],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOTRECOVERABLE],[ENOTRECOVERABLE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOTSOCK],[ENOTSOCK],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOTSUP],[ENOTSUP],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOTTY],[ENOTTY],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENOTUNIQ],[ENOTUNIQ],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ENXIO],[ENXIO],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EOPNOTSUPP],[EOPNOTSUPP],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EOVERFLOW],[EOVERFLOW],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EOWNERDEAD],[EOWNERDEAD],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EPERM],[EPERM],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EPFNOSUPPORT],[EPFNOSUPPORT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EPIPE],[EPIPE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EPROCLIM],[EPROCLIM],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EPROCUNAVAIL],[EPROCUNAVAIL],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EPROGMISMATCH],[EPROGMISMATCH],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EPROGUNAVAIL],[EPROGUNAVAIL],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EPROTONOSUPPORT],[EPROTONOSUPPORT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EPROTOTYPE],[EPROTOTYPE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EPROTO],[EPROTO],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ERANGE],[ERANGE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EREMCHG],[EREMCHG],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EREMOTEIO],[EREMOTEIO],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EREMOTE],[EREMOTE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ERESTART],[ERESTART],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ERFKILL],[ERFKILL],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EROFS],[EROFS],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ERPCMISMATCH],[ERPCMISMATCH],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ESHUTDOWN],[ESHUTDOWN],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ESOCKTNOSUPPORT],[ESOCKTNOSUPPORT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ESPIPE],[ESPIPE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ESRCH],[ESRCH],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ESRMNT],[ESRMNT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ESTALE],[ESTALE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ESTRPIPE],[ESTRPIPE],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ETIMEDOUT],[ETIMEDOUT],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ETIME],[ETIME],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ETOOMANYREFS],[ETOOMANYREFS],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_ETXTBSY],[ETXTBSY],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EUCLEAN],[EUCLEAN],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EUNATCH],[EUNATCH],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EUSERS],[EUSERS],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EWOULDBLOCK],[EWOULDBLOCK],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EXDEV],[EXDEV],[CCSYS_ERRNO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EXFULL],[EXFULL],[CCSYS_ERRNO_HEADER])

AC_CACHE_SAVE

dnl page
#### system constants: interprocess signal numbers

CCSYS_MAYBE_ENUM_DEF([CCSYS_NSIG],[NSIG],[CCSYS_SIGNAL_HEADER])

# program error
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGFPE],[SIGFPE],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGILL],[SIGILL],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGSEGV],[SIGSEGV],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGBUS],[SIGBUS],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGABRT],[SIGABRT],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGIOT],[SIGIOT],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGTRAP],[SIGTRAP],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGEMT],[SIGEMT],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGSYS],[SIGSYS],[CCSYS_SIGNAL_HEADER])

# termination
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGTERM],[SIGTERM],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGINT],[SIGINT],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGQUIT],[SIGQUIT],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGKILL],[SIGKILL],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGHUP],[SIGHUP],[CCSYS_SIGNAL_HEADER])

# alarm
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGALRM],[SIGALRM],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGVRALRM],[SIGVRALRM],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGPROF],[SIGPROF],[CCSYS_SIGNAL_HEADER])

# asynchronous I/O
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGIO],[SIGIO],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGURG],[SIGURG],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGPOLL],[SIGPOLL],[CCSYS_SIGNAL_HEADER])

# job control
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGCHLD],[SIGCHLD],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGCLD],[SIGCLD],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGCONT],[SIGCONT],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGSTOP],[SIGSTOP],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGTSTP],[SIGTSTP],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGTTIN],[SIGTTIN],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGTTOU],[SIGTTOU],[CCSYS_SIGNAL_HEADER])

# operation error
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGPIPE],[SIGPIPE],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGLOST],[SIGLOST],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGXCPU],[SIGXCPU],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGXSFZ],[SIGXSFZ],[CCSYS_SIGNAL_HEADER])

# misc
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGUSR1],[SIGUSR1],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGUSR2],[SIGUSR2],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGWINCH],[SIGWINCH],[CCSYS_SIGNAL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SIGINFO],[SIGINFO],[CCSYS_SIGNAL_HEADER])

AC_CACHE_SAVE

dnl page
#### system constants

# Open modes.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_CREAT],[O_CREAT],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_DIRECTORY],[O_DIRECTORY],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_DIRECT],[O_DIRECT],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_DSYNC],[O_DSYNC],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_EXCL],[O_EXCL],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_LARGEFILE],[O_LARGEFILE],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_NDELAY],[O_NDELAY],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_NOATIME],[O_NOATIME],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_NOCTTY],[O_NOCTTY],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_NOFOLLOW],[O_NOFOLLOW],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_NONBLOCK],[O_NONBLOCK],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_PATH],[O_PATH],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_SYNC],[O_SYNC],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_TMPFILE],[O_TMPFILE],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_TRUNC],[O_TRUNC],[CCSYS_FCNTL_HEADER])

# Access modes.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_RDONLY],[O_RDONLY],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_WRONLY],[O_WRONLY],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_RDWR],[O_RDWR],[CCSYS_FCNTL_HEADER])

# Operating modes.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_APPEND],[O_APPEND],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_ASYNC],[O_ASYNC],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_CLOEXEC],[O_CLOEXEC],[CCSYS_FCNTL_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_O_NOATIME],[O_NOATIME],[CCSYS_FCNTL_HEADER])

# Permissions.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IRUSR],[S_IRUSR],[CCSYS_SYS_STAT_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IWUSR],[S_IWUSR],[CCSYS_SYS_STAT_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IXUSR],[S_IXUSR],[CCSYS_SYS_STAT_HEADER])

CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IRGRP],[S_IRGRP],[CCSYS_SYS_STAT_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IWGRP],[S_IWGRP],[CCSYS_SYS_STAT_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IXGRP],[S_IXGRP],[CCSYS_SYS_STAT_HEADER])

CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IROTH],[S_IROTH],[CCSYS_SYS_STAT_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IWOTH],[S_IWOTH],[CCSYS_SYS_STAT_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IXOTH],[S_IXOTH],[CCSYS_SYS_STAT_HEADER])

CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IRWXU],[S_IRWXU],[CCSYS_SYS_STAT_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IRWXG],[S_IRWXG],[CCSYS_SYS_STAT_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_S_IRWXO],[S_IRWXO],[CCSYS_SYS_STAT_HEADER])

CCSYS_MAYBE_ENUM_DEF([CCSYS_S_ISUID],[S_ISUID],[CCSYS_SYS_STAT_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_S_ISGID],[S_ISGID],[CCSYS_SYS_STAT_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_S_ISVTX],[S_ISVTX],[CCSYS_SYS_STAT_HEADER])

# Seek constants.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_SEEK_SET],[SEEK_SET],[CCSYS_UNISTD_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SEEK_CUR],[SEEK_CUR],[CCSYS_UNISTD_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SEEK_END],[SEEK_END],[CCSYS_UNISTD_HEADER])

# File descriptor flags constants.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_FD_CLOEXEC],[FD_CLOEXEC],[CCSYS_FCNTL_HEADER])

CCSYS_VALUEOF([CCSYS_FD_SETSIZE],[FD_SETSIZE],[CCSYS_SYS_SELECT_HEADER])

# Flags for scatter-gather input/output.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_RWF_HIPRI],[RWF_HIPRI],[CCSYS_SYS_UIO_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_RWF_NOWAIT],[RWF_NOWAIT],[CCSYS_SYS_UIO_HEADER])

# Flags for "unlinkat(2)".
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_AT_REMOVEDIR],[AT_REMOVEDIR],[CCSYS_FCNTL_HEADER])

# Socket  namespaces.   On  GNU+Linux   systems,  see  the  manual  page
# "socket(2)" for the full list.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_SOCK_STREAM],[SOCK_STREAM],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SOCK_DGRAM],[SOCK_DGRAM],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SOCK_SEQPACKET],[SOCK_SEQPACKET],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SOCK_RAW],[SOCK_RAW],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SOCK_RDM],[SOCK_RDM],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_SOCK_PACKET],[SOCK_PACKET],[CCSYS_SYS_SOCKET_HEADER])

# Socket styles  or types.   On GNU+Linux systems,  see the  manual page
# "socket(2)" for the full list.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_UNIX],[AF_UNIX],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_LOCAL],[AF_LOCAL],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_INET],[AF_INET],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_INET6],[AF_INET6],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_IPX],[AF_IPX],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_NETLINK],[AF_NETLINK],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_X25],[AF_X25],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_AX25],[AF_AX25],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_ATMPVC],[AF_ATMPVC],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_APPLETALK],[AF_APPLETALK],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_PACKET],[AF_PACKET],[CCSYS_SYS_SOCKET_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_AF_ALG],[AF_ALG],[CCSYS_SYS_SOCKET_HEADER])

# Socket  protocols.    On  GNU+Linux  systems,  see   the  manual  page
# "protocols(5)" for the full list.
#
AC_SUBST([CCSYS_ENUM_DEF_CCSYS_SOCK_PROTOCOL_IP],[CCSYS_SOCK_PROTOCOL_IP=0[],])

# Flags for  "mlockall(2)".  On GNU+Linux  systems, see the  manual page
# "mlockall(2)" for the full list.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_MCL_CURRENT],[MCL_CURRENT],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MCL_FUTURE],[MCL_FUTURE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MCL_ONFAULT],[MCL_ONFAULT],[CCSYS_SYS_MMAN_HEADER])

# Protection specification for "mmap(2)".  On GNU+Linux systems, see the
# manual page "mmap(2)" for the full list.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_PROT_EXEC],[PROT_EXEC],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_PROT_READ],[PROT_READ],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_PROT_WRITE],[PROT_WRITE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_PROT_NONE],[PROT_NONE],[CCSYS_SYS_MMAN_HEADER])

# Flags  for  "mmap(2)".  On  GNU+Linux  systems,  see the  manual  page
# "mmap(2)" for the full list.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_SHARED],[MAP_SHARED],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_PRIVATE],[MAP_PRIVATE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_32BIT],[MAP_32BIT],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_ANON],[MAP_ANON],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_ANONYMOUS],[MAP_ANONYMOUS],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_DENYWRITE],[MAP_DENYWRITE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_EXECUTABLE],[MAP_EXECUTABLE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_FILE],[MAP_FILE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_FIXED],[MAP_FIXED],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_GROWSDOWN],[MAP_GROWSDOWN],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_HUGETLB],[MAP_HUGETLB],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_HUGE_2MB],[MAP_HUGE_2MB],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_HUGE_1GB],[MAP_HUGE_1GB],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_LOCKED],[MAP_LOCKED],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_NONBLOCK],[MAP_NONBLOCK],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_NORESERVE],[MAP_NORESERVE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_POPULATE],[MAP_POPULATE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_STACK],[MAP_STACK],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_UNINITIALIZED],[MAP_UNINITIALIZED],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_AUTOGROW],[MAP_AUTOGROW],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_AUTORESRV],[MAP_AUTORESRV],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_COPY],[MAP_COPY],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MAP_LOCAL],[MAP_LOCAL],[CCSYS_SYS_MMAN_HEADER])

# Flags  for "msync(2)".   On  GNU+Linux systems,  see  the manual  page
# "msync(2)" for the full list.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_MS_ASYNC],[MS_ASYNC],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MS_SYNC],[MS_SYNC],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MS_INVALIDATE],[MS_INVALIDATE],[CCSYS_SYS_MMAN_HEADER])

# Flags  for "mremap(2)".   On GNU+Linux  systems, see  the manual  page
# "mremap(2)" for the full list.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_MREMAP_MAYMOVE],[MREMAP_MAYMOVE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MREMAP_FIXED],[MREMAP_FIXED],[CCSYS_SYS_MMAN_HEADER])

# Flags for  "madvise(2)".  On  GNU+Linux systems,  see the  manual page
# "madvise(2)" for the full list.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_NORMAL],[MADV_NORMAL],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_RANDOM],[MADV_RANDOM],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_SEQUENTIAL],[MADV_SEQUENTIAL],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_WILLNEED],[MADV_WILLNEED],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_DONTNEED],[MADV_DONTNEED],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_REMOVE],[MADV_REMOVE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_DONTFORK],[MADV_DONTFORK],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_DOFORK],[MADV_DOFORK],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_HWPOISON],[MADV_HWPOISON],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_MERGEABLE],[MADV_MERGEABLE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_UNMERGEABLE],[MADV_UNMERGEABLE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_SOFT_OFFLINE],[MADV_SOFT_OFFLINE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_HUGEPAGE],[MADV_HUGEPAGE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_NOHUGEPAGE],[MADV_NOHUGEPAGE],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_DONTDUMP],[MADV_DONTDUMP],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_DODUMP],[MADV_DODUMP],[CCSYS_SYS_MMAN_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_MADV_FREE],[MADV_FREE],[CCSYS_SYS_MMAN_HEADER])

# Exit statuses modes.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_EXIT_SUCCESS],[EXIT_SUCCESS],[CCSYS_STDLIB_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_EXIT_FAILURE],[EXIT_FAILURE],[CCSYS_STDLIB_HEADER])

# Process wait options.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_WNOHANG],[WNOHANG],[CCSYS_STDLIB_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_WUNTRACED],[WUNTRACED],[CCSYS_STDLIB_HEADER])
CCSYS_MAYBE_ENUM_DEF([CCSYS_WCONTINUED],[WCONTINUED],[CCSYS_STDLIB_HEADER])

# Limits.
#
CCSYS_MAYBE_ENUM_DEF([CCSYS_PATH_MAX],[PATH_MAX],[CCSYS_LIMITS_HEADER])

dnl page
#### finish

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile]
   [src/ccsys.h]
   [meta/scripts/ccsys.pc]
   [meta/slackstuff/config]
   [meta/slackware/slack-desc])
AC_OUTPUT

### end of file
# Local Variables:
# mode: autoconf
# page-delimiter: "^dnl page"
# End:
